# md2ipynb

./: .gitignore  README.md  pyproject.toml  setup.py
src/md2ipynb/: __init__.py  main.py
tests/: __init__.py  test_cli.py  test_conversion.py
